--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ryozm/antd",
+  "name": "antd",
   "version": "4.11.2",
   "description": "An enterprise-class UI design language and React components implementation",
   "title": "Ant Design",
